Image Tile List Alignment Fixes

--- a/src/sxastarter/src/assets/sass/_app.scss
+++ b/src/sxastarter/src/assets/sass/_app.scss
@@ -100,3 +100,15 @@ ul li {
   color:#fff;
   max-width: 500px;
 }
+
+.anchor-font {
+  @include tiroFont();
+}
+
+.subheading-font {
+  @include subHeadingFont();
+}
+
+.b-15p {
+  bottom: 15px;
+}
