--- a/src/sxastarter/src/assets/sass/abstracts/_mixins.scss
+++ b/src/sxastarter/src/assets/sass/abstracts/_mixins.scss
@@ -119,3 +119,11 @@ $break-mobile-large: 992px;
       background: $bg-light-gray;
   }
 }
+
+@mixin tiroFont() {
+    font-family: 'Tiro Devanagari Hindi', serif;
+}
+
+@mixin subHeadingFont() {
+    font-family: 'Jost', sans-serif;
+}
